// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default Option component 1`] = `
<li
  aria-disabled={false}
  className="option"
  data-value="a"
  disabled={false}
  role="option"
  tabIndex="0"
/>
`;

exports[`should render a disabled Option 1`] = `
<li
  aria-disabled={true}
  className="option is-disabled"
  data-value="a"
  disabled={true}
  role="option"
  tabIndex="-1"
>
  Apple
</li>
`;

exports[`should render a selected Option 1`] = `
<li
  aria-disabled={false}
  className="option is-selected"
  data-value="a"
  disabled={false}
  role="option"
  tabIndex="0"
>
  Apple
</li>
`;

exports[`should render an Option component with display 1`] = `
<li
  aria-disabled={false}
  className="option"
  data-value="a"
  disabled={false}
  role="option"
  tabIndex="0"
>
  Apple
</li>
`;

exports[`should render an Option with children 1`] = `
<li
  aria-disabled={false}
  className="option is-selected"
  data-value="a"
  disabled={false}
  role="option"
  tabIndex="0"
>
  <div>
    child
  </div>
</li>
`;

exports[`should render an Option with display when both display and children props are set 1`] = `
<li
  aria-disabled={false}
  className="option is-selected"
  data-value="a"
  disabled={false}
  role="option"
  tabIndex="0"
>
  Apple
</li>
`;
